First content insertion

--- a/Kapitel/00_preamble/cmd.tex
+++ b/Kapitel/00_preamble/cmd.tex
@@ -4,8 +4,11 @@
 	\end{itemize}
 	}
 	
+\newcommand{\bildc}[3]{\begin{center}\includegraphics[width=#1\textwidth]{#2}\\\tiny{#3}\end{center}}
+\newcommand{\bild}[3]{\includegraphics[width=#1\textwidth]{#2}\\\tiny{#3}}
+
 \newenvironment{enumerates}[1]{
 	\begin{enumerate}\setlength{\itemsep}{#1}		
 	}{
 \end{enumerate}
-}	
+}
