--- a/Kapitel/01/01.tex
+++ b/Kapitel/01/01.tex
@@ -1,6 +1,75 @@
 \section{Idee}
 %
 \begin{frame}{}
-\huge{Idee}
+\begin{center}
+	\huge{Idee}
+\end{center}
 \end{frame}
+%
+\begin{frame}{Erster Ansatz}
+	\begin{itemizes}{1em}
+		\item Suche nach einem Opensourceprogramm
+		\item Über www.codetriage.com
+		\begin{itemizes}{0em}
+			\item Zur Vermittlung von Opensourceprojekten an Entwickler
+		\end{itemizes}
+		\item Auswahl von Astor als Debuggingtool
+	\end{itemizes}
+\end{frame}
+%
+\begin{frame}{libgdx}
+	\begin{itemizes}{1em}
+		\item Ist ein Java-Framework
+		\item Für plattformunabhängige Spielentwicklung
+		\item Unterstüzt Windows, Mac, Linux, Android, iOS \& Blackberry
+		\item Unter Apache-2-Lizenz freigegeben
+	\end{itemizes}
+\end{frame}
+%
+\begin{frame}{Astor}
+	\begin{itemizes}{1em}
+		\item \underline{A}utomatic \underline{S}oftware \underline{T}ransformations f\underline{O}r program \underline{R}epair
+		\item Für automatische Reparatur von Java Programmen
+		\item Ursprüngliche implementaiton in C, jetzt in Java
+		\item Besteht aus 3 Programmteilen
+		\begin{itemizes}{0em}
+			\item jGenProg2
+			\item jKali
+			\item jMutRepair
+		\end{itemizes}
+	\end{itemizes}
+\end{frame}
+%
+\begin{frame}{Probleme}
+	\begin{itemizes}{1em}
+		\item Installationsprobleme von libgdx
+		\begin{itemizes}{1em}
+			\item Benötigt spezielle Bibliotheken
+		\end{itemizes}
+		\item Probleme bei Astor
+		\begin{itemizes}{1em}
+			\item Kann Fehler nicht fixen, welche GenProg können soll
+		\end{itemizes}
+		\item Neuer Fokus auf Astor
+	\end{itemizes}
+\end{frame}
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
+%
 %
