--- a/Kapitel/04/04.tex
+++ b/Kapitel/04/04.tex
@@ -1,6 +1,41 @@
 \section{Ergebnisse}
 %
 \begin{frame}{}
-\huge{Ergebnisse}
+	\begin{center}
+		\huge{Ergebnisse}
+	\end{center}
+\end{frame}
+%
+\begin{frame}{Die Testmenge}
+	\begin{itemizes}{1em}
+		\item Als Testmenge wurden die Fehler von defects4j verwendet.
+		\item 395 Test stehen zur Verfügung in folgenden Bereichen
+		\begin{itemizes}{0.3em}
+			\item JFreechart (26)
+			\item Closure compiler (133)
+			\item Apache commons-lang (65)
+			\item Apache commons-math (106)
+			\item Mockito (38)
+			\item Joda-Time (27)
+		\end{itemizes}
+	\end{itemizes}
+\end{frame}
+%
+\begin{frame}{}
+	\bildc{0.5}{img/astorDef4j_results.png}{Entnommen aus \cite{MM16}}
+\end{frame}
+%
+\begin{frame}{Was dann passiert weiß noch keiner.}
+	\begin{itemizes}{1em}
+		\item ...
+		\item ...
+		\item ...
+	\end{itemizes}
+\end{frame}
+%
+
+\begin{frame}{Quellen}
+	\bibliography{ref}
+	\bibliographystyle{alpha}
 \end{frame}
 %
