--- a/vortrag.tex
+++ b/vortrag.tex
@@ -11,7 +11,7 @@
 
 \def\email{\href{mailto:bucherda@informatik.hu-berlin.de}{bucherda@informatik.hu-berlin.de}}
 
-\title[]{Abschlusspräsentation}
+\title[TITEL FEHLT]{Abschlusspräsentation}
 
 \begin{document}
 \input{./Kapitel/00_preamble/toc.tex}
@@ -19,6 +19,5 @@
 \input{./Kapitel/02/02.tex}
 \input{./Kapitel/03/03.tex}
 \input{./Kapitel/04/04.tex}
-
 
 \end{document}
