--- a/vortrag.tex
+++ b/vortrag.tex
@@ -15,9 +15,9 @@
 
 \begin{document}
 \input{./Kapitel/00_preamble/toc.tex}
-%\input{./Kapitel/01/01.tex}
-%\input{./Kapitel/02/02.tex}
-%\input{./Kapitel/03/03.tex}
+\input{./Kapitel/01/01.tex}
+\input{./Kapitel/02/02.tex}
+\input{./Kapitel/03/03.tex}
 \input{./Kapitel/04/04.tex}
 
 \end{document}
