fixed some things

--- a/Kapitel/02/02.tex
+++ b/Kapitel/02/02.tex
@@ -21,7 +21,7 @@
 \begin{frame}{Kali}
 	\begin{itemizes}{1em}
 		\item Zielt auf schwache Testsuits
-		\item Vorgehen bei der "Reperatur":
+		\item Vorgehen bei der "{}Reperatur":
 		\begin{itemizes}{0.2em}
 			\item löschen von Zeilen
 			\item überspringen von Zeilen
