--- a/Kapitel/04/04.tex
+++ b/Kapitel/04/04.tex
@@ -43,8 +43,7 @@
 %
 \begin{frame}{Validierung}
 \begin{itemizes}{1em}
-	\item Entwicklung eines eigenen Testprogramms
-	\item Welches den Patch validieren kann
+	\item Nutzung des eigenen Testprogramms zu Validierung
 \end{itemizes}
 \end{frame}
 %
