--- a/Kapitel/03/03.tex
+++ b/Kapitel/03/03.tex
@@ -8,34 +8,33 @@
 %
 \begin{frame}{Testprogramm (1)}
 	\begin{figure}
-		\centering
-		\scalebox{0.73}{
-			\begin{minipage}{1.0\linewidth}
-				\lstinputlisting[language=Java]{code/Program.java}
-			\end{minipage}
-		}
+		\begin{center}
+			\scalebox{0.74}{
+				\begin{minipage}{25em}
+					\lstinputlisting[language=Java]{code/Program.java}
+				\end{minipage}
+			}
+		\end{center}
 	\end{figure}
 \end{frame}
 %
 \begin{frame}{Testprogramm (2)}
 	\begin{figure}
-		\centering
-		\scalebox{1}{
-			\begin{minipage}{1.0\linewidth}
-				\lstinputlisting[language=Java]{code/Language.java}
-			\end{minipage}
-		}
+		\begin{center}
+			\scalebox{1}{
+				\begin{minipage}{1.0\linewidth}
+					\lstinputlisting[language=Java]{code/Language.java}
+				\end{minipage}
+			}
+	\end{center}
 	\end{figure}
 \end{frame}
 %
 \begin{frame}{Test-Suite}
 	\begin{figure}
-		\centering
-		\scalebox{0.75}{
-			\begin{minipage}{1.0\linewidth}
-				\lstinputlisting[language=Java]{code/ProgramTest.java}
-			\end{minipage}
-		}
+			\scalebox{0.76}{
+				\lstinputlisting[language=Java,framexrightmargin=9em]{code/ProgramTest.java}
+			}
 	\end{figure}
 \end{frame}
 %
@@ -166,11 +165,8 @@
 %
 \begin{frame}{Resultat nach Fix}
 	\begin{figure}
-		\centering
-		\scalebox{0.45}{
-			\begin{minipage}{1.0\linewidth}
-				\lstinputlisting[language=Java]{code/fixed.java}
-			\end{minipage}
+		\scalebox{0.8}{
+			\lstinputlisting[language=Java,framexrightmargin=9em]{code/fixed.java}
 		}
 	\end{figure}
 \end{frame}
