added reference of funny image, added reference of Philipps Papaer

--- a/Kapitel/03/03.tex
+++ b/Kapitel/03/03.tex
@@ -41,7 +41,7 @@
 \begin{frame}{Resultat}
 	Astor findet keinen Bugfix...
 	\begin{figure}
-		\includegraphics[width=0.7\textwidth]{img/facepalm.jpg}
+		\bildc{0.7}{img/facepalm.jpg}{http://s2.quickmeme.com/img/\\61/612c2a41963c779a0477c6d5b91959a36ab2b351d9d117f19564d04fc63127c7.jpg}
 	\end{figure}
 \end{frame}
 %
