--- a/vortrag.tex
+++ b/vortrag.tex
@@ -11,7 +11,7 @@
 
 \def\email{\href{mailto:bucherda@informatik.hu-berlin.de}{bucherda@informatik.hu-berlin.de}}
 
-\title[TITEL FEHLT]{Abschlusspräsentation}
+\title[Fixing a Bug in Astor]{Abschlusspräsentation}
 
 \begin{document}
 \input{./Kapitel/00_preamble/toc.tex}
